--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Hydrogineer, site web personnel de Hydromel Victor Doledji Backend Software Engineer. spécialité: C, Python [ flask, django, GTK, kivy ], JavaScript et derivées, Java, Bash.....">
     <meta name="author" content="Hydromel Victor Doledji">
     <title>HydroGineer</title>
-    <link rel="shortcut icon" href="./static/svg/hydromel.svg" type="image/x-icon">
-    <link rel="stylesheet" href="./static/css/base.css">
-    <link rel="stylesheet" href="./static/css/bootstrap-icons.css">
+    <link rel="shortcut icon" href="hydromel.svg" type="image/x-icon">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="bootstrap-icons.css">
 </head>
 <body>
     <header>
