--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
         </aside>
         <div class="body">
             <section id="home">
-                <h2>HOME</h2>
-                <div>
-                    <h1>Hydromel Victor Doledji</h1>
-                    <h2>Software Engineer Back end</h2>
+                <div class="corp">
+                    <p>
+                        <div id="names">Hydromel Victor Doledji</div>
+                        <div id="job">Software Engineer Backend</div>
+                    </p>
                 </div>
             </section>
             <section id="aboutme">
                 <h2>ABOUT ME</h2>
-                <div class="about-body">
+                <div class="corp">
                     <p>
                         Hi! I'm Victor Doledji alias Hydromel student in data science, certified software engineer option backend and mathematician.
                         I specialize in the python language with advanced skills in languages such as C, bash, Javascript ... As well as Mysql, Mongodb and redis, I am passionate about coding, Unix systems and many other things ...<br>
