--- a/index.html
+++ b/index.html
@@ -30,18 +30,21 @@
             <section id="home">
                 <div class="corp">
                     <p>
+                        <div id="me"></div>
                         <div id="names">Hydromel Victor Doledji</div>
                         <div id="job">Software Engineer Backend</div>
                     </p>
+                    <div class="lle">I bring your projects to life...</div>
                 </div>
             </section>
             <section id="aboutme">
-                <h2>ABOUT ME</h2>
                 <div class="corp">
+                    <h2>ABOUT ME</h2>
                     <p>
                         Hi! I'm Victor Doledji alias Hydromel student in data science, certified software engineer option backend and mathematician.
                         I specialize in the python language with advanced skills in languages such as C, bash, Javascript ... As well as Mysql, Mongodb and redis, I am passionate about coding, Unix systems and many other things ...<br>
-                        It would be an honor to work with you.
+                        It would be an honor to work with you...
+                        <a class="cv" href="https://cvdesignr.com/p/hydromel?hl=fr_FR">See my CV</a>
                     </p>
                 </div>
             </section>
