--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                 <div>
                     <a href="https://www.linkedin.com/in/hydromelvictor/">
                         <i class="bi bi-linkedin"></i>
-                        <span>in/hydromel</span>
+                        <span>in/hydromelvictor</span>
                     </a>
                     <a href="https://twitter.com/hydromelvictor">
                         <i class="bi bi-twitter"></i>
-                        <span>@WarningCode</span>
+                        <span>@hydromelvictor</span>
                     </a>
                     <a href="https://www.secure.instagram.com/hydromelvictor/">
                         <i class="bi bi-instagram"></i>
@@ -90,7 +90,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-medium" viewBox="0 0 16 16">
                             <path d="M9.025 8c0 2.485-2.02 4.5-4.513 4.5A4.506 4.506 0 0 1 0 8c0-2.486 2.02-4.5 4.512-4.5A4.506 4.506 0 0 1 9.025 8zm4.95 0c0 2.34-1.01 4.236-2.256 4.236-1.246 0-2.256-1.897-2.256-4.236 0-2.34 1.01-4.236 2.256-4.236 1.246 0 2.256 1.897 2.256 4.236zM16 8c0 2.096-.355 3.795-.794 3.795-.438 0-.793-1.7-.793-3.795 0-2.096.355-3.795.794-3.795.438 0 .793 1.699.793 3.795z"/>
                         </svg>
-                        <span>Hydromel</span>
+                        <span>@hydromelvictor</span>
                     </a>
                     <a href="https://www.youtube.com/@_hydromel">
                         <i class="bi bi-youtube"></i>
